`refactor: 예외 처리 및 프로젝트 서비스 로직 리팩토링`
- 예외 클래스 필드를 불변(final)로 변경하여 데이터 안정성 강화
- 불필요한 Lombok 어노테이션(@ToString) 제거 및 가독성 개선
- ProjectServiceImpl에 Optional 활용으로 Null 검증 로직 단순화
- build.gradle에 불필요한 주석 제거 및 Apache Commons Lang 의존성 추가